# weight_tracking

./: docker-compose.yml
db_init/: 001_measurements.sql
weight_tracking_api/: Cargo.toml  Dockerfile
weight_tracking_api/src/: endpoints.rs  main.rs  models.rs
weight_tracking_registering/: Cargo.toml
weight_tracking_registering/src/: main.rs
