[package]
name = "weight_tracking_registering"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.39", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12.5", features = ["json"] }
